@@ -17,7 +17,6 @@ import java.io.IOException;
 import java.io.StringWriter;
 import java.time.Instant;
 import java.time.LocalDate;
-import java.time.LocalDateTime;
 import java.time.ZoneId;
 import java.util.*;
 import java.util.concurrent.ConcurrentHashMap;
@@ -36,22 +35,22 @@ import java.util.stream.Collectors;
 @RequiredArgsConstructor
 @Slf4j
 public class AuditService {
-
+    
     private static final String[] CSV_HEADERS = {
-            "event_id", "event_type", "timestamp", "username", "filename",
-            "stored_as", "file_size", "content_type", "ip_address",
-            "user_agent", "session_id", "actor_username"
+        "event_id", "event_type", "timestamp", "username", "filename",
+        "stored_as", "file_size", "content_type", "ip_address",
+        "user_agent", "session_id", "actor_username"
     };
-
+    
     private final StorageService storage;
     private final LuxBackConfig config;
-
+    
     // Per-user locks to prevent concurrent writes to same user's CSV
     private final ConcurrentHashMap<String, ReentrantLock> userLocks = new ConcurrentHashMap<>();
-
+    
     // Per-user cache of audit events
     private final ConcurrentHashMap<String, List<AuditEvent>> perUserCache = new ConcurrentHashMap<>();
-
+    
     /**
      * Record a file upload event
      */
@@ -73,21 +72,21 @@ public class AuditService {
                     request.getSession().getId(),
                     username // actor is uploader
             );
-
+            
             // Invalidate cache for this user
             perUserCache.remove(username);
-
+            
             log.info("Recorded upload: user={}, file={}", username, metadata.getOriginalFilename());
         } finally {
             lock.unlock();
         }
     }
-
+    
     /**
      * Record a file download event
      */
     public void recordDownload(String fileOwner, String originalFilename, String storedFilename,
-                               String downloaderUsername, HttpServletRequest request) {
+                              String downloaderUsername, HttpServletRequest request) {
         ReentrantLock lock = userLocks.computeIfAbsent(fileOwner, k -> new ReentrantLock());
         lock.lock();
         try {
@@ -105,31 +104,31 @@ public class AuditService {
                     request.getSession().getId(),
                     downloaderUsername // actor is downloader
             );
-
+            
             // Invalidate cache for file owner
             perUserCache.remove(fileOwner);
-
+            
             log.info("Recorded download: owner={}, downloader={}, file={}",
                     fileOwner, downloaderUsername, originalFilename);
         } finally {
             lock.unlock();
         }
     }
-
+    
     /**
      * Search all audit events across all users
      */
     public List<AuditEvent> searchAllAudit(SearchCriteria criteria) {
         List<AuditEvent> allEvents = getAllUsernames().stream()
                 .flatMap(username -> getUserEvents(username).stream())
-                .toList();
-
+                .collect(Collectors.toList());
+        
         return allEvents.stream()
                 .filter(event -> matchesCriteria(event, criteria))
                 .sorted(Comparator.comparing(AuditEvent::getTimestamp).reversed())
                 .collect(Collectors.toList());
     }
-
+    
     /**
      * Get the original filename for a stored file from audit records
      */
@@ -140,75 +139,75 @@ public class AuditService {
                 .map(AuditEvent::getFilename)
                 .orElse(storedFilename); // Fallback to stored filename
     }
-
+    
     /**
      * Get audit events for a specific user (with caching)
      */
     private List<AuditEvent> getUserEvents(String username) {
         return perUserCache.computeIfAbsent(username, this::loadUserAudit);
     }
-
+    
     /**
      * Load audit events from user's CSV file
      */
     private List<AuditEvent> loadUserAudit(String username) {
         String path = config.getAuditIndexPath() + "/" + username + ".csv";
-
+        
         try {
             if (!storage.exists(path)) {
                 log.debug("No audit file for user: {}", username);
                 return new ArrayList<>();
             }
-
+            
             String csv = storage.readString(path);
             CSVParser parser = CSVParser.parse(csv, CSVFormat.DEFAULT.withFirstRecordAsHeader());
-
+            
             List<AuditEvent> events = parser.stream()
                     .map(this::recordToAuditEvent)
                     .collect(Collectors.toList());
-
+            
             log.debug("Loaded {} audit events for user: {}", events.size(), username);
             return events;
-
+            
         } catch (IOException e) {
             log.error("Failed to read audit file for user: " + username, e);
             return new ArrayList<>();
         }
     }
-
+    
     /**
      * Append an audit event to user's CSV file
      */
     private void appendAuditEvent(String username, Object... values) {
         String path = config.getAuditIndexPath() + "/" + username + ".csv";
         boolean fileExists = storage.exists(path);
-
+        
         try {
             StringWriter sw = new StringWriter();
             CSVPrinter printer = new CSVPrinter(sw, CSVFormat.DEFAULT);
-
+            
             // Write header if new file
             if (!fileExists) {
                 printer.printRecord((Object[]) CSV_HEADERS);
             }
-
+            
             // Write the event record
             printer.printRecord(values);
             printer.close();
-
+            
             // Append to file or create new file
             if (fileExists) {
                 storage.append(path, sw.toString());
             } else {
                 storage.writeString(path, sw.toString());
             }
-
+            
         } catch (IOException e) {
             log.error("Failed to append audit event for user: " + username, e);
             throw new RuntimeException("Failed to record audit event", e);
         }
     }
-
+    
     /**
      * Convert CSV record to AuditEvent object
      */
@@ -216,7 +215,7 @@ public class AuditService {
         return AuditEvent.builder()
                 .eventId(record.get("event_id"))
                 .eventType(record.get("event_type"))
-                .timestamp(LocalDateTime.parse(record.get("timestamp")))
+                .timestamp(Instant.parse(record.get("timestamp")))
                 .username(record.get("username"))
                 .filename(record.get("filename"))
                 .storedAs(record.get("stored_as"))
@@ -228,7 +227,7 @@ public class AuditService {
                 .actorUsername(record.get("actor_username"))
                 .build();
     }
-
+    
     /**
      * Get optional string value from CSV record
      */
@@ -240,7 +239,7 @@ public class AuditService {
             return null;
         }
     }
-
+    
     /**
      * Parse optional long value from CSV record
      */
@@ -255,7 +254,7 @@ public class AuditService {
             return null;
         }
     }
-
+    
     /**
      * Check if audit event matches search criteria
      */
@@ -263,32 +262,34 @@ public class AuditService {
         if (criteria == null) {
             return true;
         }
-
+        
         if (criteria.getFilename() != null &&
                 !event.getFilename().toLowerCase().contains(criteria.getFilename().toLowerCase())) {
             return false;
         }
-
+        
         if (criteria.getUsername() != null &&
                 !event.getUsername().equals(criteria.getUsername())) {
             return false;
         }
-
+        
         if (criteria.getStartDate() != null) {
             LocalDate eventDate = event.getTimestamp().atZone(ZoneId.systemDefault()).toLocalDate();
             if (eventDate.isBefore(criteria.getStartDate())) {
                 return false;
             }
         }
-
+        
         if (criteria.getEndDate() != null) {
             LocalDate eventDate = event.getTimestamp().atZone(ZoneId.systemDefault()).toLocalDate();
-            return !eventDate.isAfter(criteria.getEndDate());
+            if (eventDate.isAfter(criteria.getEndDate())) {
+                return false;
+            }
         }
-
+        
         return true;
     }
-
+    
     /**
      * Extract client IP address from request
      */
@@ -299,7 +300,7 @@ public class AuditService {
         }
         return ip;
     }
-
+    
     /**
      * Get all usernames from audit index files
      */
@@ -310,14 +311,14 @@ public class AuditService {
                 .filter(Objects::nonNull)
                 .collect(Collectors.toList());
     }
-
+    
     /**
      * Extract username from audit file path
      */
     private String extractUsernameFromPath(String path) {
         int lastSlash = path.lastIndexOf('/');
         int lastDot = path.lastIndexOf('.');
-
+        
         if (lastSlash >= 0 && lastDot > lastSlash) {
             return path.substring(lastSlash + 1, lastDot);
         }
